--- a/playbooks/plantilla.yml
+++ b/playbooks/plantilla.yml
@@ -88,6 +88,9 @@
 ##############################################################################################
 #   CONDICIONALES
 ##############################################################################################
+
+  # BASADOS EN UNA CONDICION GENERICA
+  
     # Tarea que se ejecuta bajo ciertas condiciones
     - name: 8- Tarea que se ejecuta solamente en máquinas Ubuntu
       debug: 
@@ -108,12 +111,15 @@
         msg: "Esta maquina si es UBUNTU: {{ ansible_facts.distribution }} {{ ansible_facts.distribution_major_version }}"
       # Me permnite determinar cuando se debe ejecutar la tarea (es como un if)
       #when: ansible_facts.distribution == 'Ubuntu' and ansible_facts.distribution_major_version > "16"
+      # Igual que un AND podríamos poner un OR
       when: 
         # Esta lista se procesa como un AND
         - ansible_facts.distribution == 'Ubuntu'
         - ansible_facts.distribution_major_version > "16"
       #vars: Variables a nivel de tarea
     
+  # BASADOS EN SI UNA TAREA REALIZA O NO CAMBIOS
+
     # Tarea básica que al ejecutarse, pide a su vez que se ejecute otra tarea (mediante INVOCACION DIRECTA)
     - name: 11- Tarea que dispara otra tarea (handler)
       debug: 
@@ -145,6 +151,124 @@
       # Todos los handler subscritos al evento, se ejecutarán
       notify: FORMATEAR
 
+  # BASADOS EN TAGS MANUALES -> FILTRO
+    # A la hora de ejecutar un playbook, podemos pedir que SOLO se ejecuten las 
+    # tareas que tenga asignadas unas determinadas etiquetas
+    # > ansible-playbook <params.....>  --tags <tags-que-quiero-procesar> 
+    - name: FILTRO 1 - INSTALACION
+      debug: 
+        msg: "Soy una tarea de instalación"
+      tags:
+        - instalacion
+
+    - name: FILTRO 2 - ACTUALIZACION
+      debug: 
+        msg: "Soy una tarea de actualización"
+      tags:
+        - actualizacion
+
+    - name: FILTRO 3 - INSTALACION Y ACTUALIZACION
+      debug: 
+        msg: "Soy una tarea que instala y actualiza"
+      tags:
+        - instalacion
+        - actualizacion
+
+##############################################################################################
+#   CONTROL DEL ESTADO DE EJECUCION DE TAREAS Y ALGO MAS DE VARIABLES
+##############################################################################################
+    
+    # Tarea que permite determinad CUANDO una tarea se marca como que ha realizado cambio. CHANGED
+    - name: 14- Crear o añade un contenido a un fichero
+      shell: 
+        cmd: exit 0
+      # Registre permite almacenar la información asociada al proceso que se 
+      # ejecuta en el entorno remoto por nuestro módulo
+      register: resultado_proceso
+        # Nos va a dar informacion como:
+          # .rc     -> Codigo de respuesta
+          # .stdout -> Salida estandar
+          # .stderr -> Salida de error
+          # .changed -> Indica si ha habido cambios
+          # .failed  -> Indica si ha habido errores
+      failed_when: resultado_proceso.rc > 10
+      changed_when: resultado_proceso.rc == 0
+
+    # Tarea que permite determinad CUANDO una tarea se marca como que ha realizado cambio. CHANGED
+    - name: 15- Mostrar información del proceso REGISTRADO
+      debug: 
+        msg: "{{ resultado_proceso }}"
+
+    # Tarea que permite determinad CUANDO una tarea se marca como que ha realizado cambio. CHANGED
+    - name: 16- Asegurar que el estado del puerto 22 no es LISTEN
+      shell: 
+        cmd: netstat -lnt | grep :22
+      # Trabajar con expresiones regulares  
+        # . -> Cualquier caracter
+        # [abc] -> ó a ó b ó c
+        # [0-9] -> Numero del 0 al 9
+        # [a-z] -> Letras de la a a la z
+        # [A-Z] -> Letras de la A a la Z
+        # [A-Za-z0-9ñá] -> Letras de la A a la Z, de la 'a' a la 'z'
+                          # numeros del 0 al 9, la ñ y la á
+        # abc -> a, b y después c
+        #
+        # MODIFICADORES DE OCURRENCIA
+          # ? -> OPCIONAL: Lo de antes puede aparecer o no
+                  # /? -> Puede haber barra no haber barra
+          # + -> Al menos 1
+                  # /+ -> Al menos una barra, pero puede haber muchas (INFINITAS)
+          # * -> Al menos 0
+                  # /* -> La barra puede no aparecer o aparecer infinitas veces
+          # {3} -> Tiene que aparecer 3 veces
+                  # [abc]{2} -> Validarían cosas como:
+                                # aa    ab    bb    ac    ca
+          # {3,7} -> Tiene que aparecer entre 3 y 7 veces
+          # {,7} -> Puede aparecer hasta 7 veces
+      # failed_when: "resultado_puerto.stdout is search('.* LISTEN .*')"
+          # SEARCH: CONTIENE UN PATRON
+      # failed_when: "resultado_puerto.stdout is match('.* LISTEN .*')"
+          # MATCH: VERIFIQUE EXACTAMENTE UN PATRON
+      # Esta es un asintaxis alternativa, pero OJO: No admite expresiones regulares
+      failed_when: "'LISTEN' in resultado_puerto.stdout"
+      register: resultado_puerto 
+      changed_when: False
+      ignore_errors: True
+
+    - name: 17- Tarea que se ejecuta solo si la tarea 16 falló
+      debug: 
+        msg: "La tarea 16 FALLÓ"
+      when: resultado_puerto is failed
+      # Determinar el estado de ejecución de una tarea pasada:
+        # is failed -> La tarea falló
+        # is succeded -> La tarea fue bien
+        # is changed -> La tarea realizó cambios
+        # is skipped -> La tarea se saltó (no entró por el when)
+        # 
+        # ESTO APLICA A TODAS LAS VARIABLES, NO SOLO A VARIABLES CON RESULTADOS DE PROCESO
+        # is defined -> Si la variable existe
+        # is undefined -> Si la variable no existe
+
+##############################################################################################
+#   BUCLES !
+##############################################################################################
+    - name: 18- Listado de IPsv4 que tiene mi maquina
+      debug: 
+        msg: "IP: {{ item }}"
+      loop: "{{ ansible_facts.all_ipv4_addresses }}"
+
+    - name: 19- Listado de CPUS (processor) que tiene mi maquina
+      debug: 
+        msg: "CPU info: {{ numero }}----{{ item }}"
+      # El when se aplica despues del loop:
+      # Es decir, se aplica de forma individual a cada elemento de la lista que se itera
+      when: (numero+1) % 3 == 0 
+      
+      loop: "{{ ansible_facts.processor }}"
+      loop_control:
+        index_var: numero
+
+            
     - name: ULTIMA TAREA
       debug: 
         msg: "HEMOS ACABADO LAS TAREAS NORMALES"
