--- a/playbooks/nginx/conf.template
+++ b/playbooks/nginx/conf.template
@@ -1,6 +1,6 @@
 server{
     listen          {{ nginx_port }};
-    server_name     {{ ansible_hostname }};
+    server_name     {{ nginx_server_name }};
     root            {{ nginx_web_path }};
     index           index.html;
 }
