--- a/inventarios/inventario/desarrollo/host_vars/desa_web.yml
+++ b/inventarios/inventario/desarrollo/host_vars/desa_web.yml
@@ -2,3 +2,22 @@ ansible_host: 172.17.0.2
 nginx_port: 8080
 mensaje_comprobar_nginx: 'Soy el fichero de la web'
 nginx_server_name: 172.17.0.2
+
+db_provisioner_info: 
+    -   nombre_conexion: CONN1
+        max_active: 50
+        max_idle: 10
+        max_wait: 60000
+        username: "{{ USER_DB1_SEC }}"
+        password:  "{{ PASSWORD_DB1_SEC }}"
+        driver_class_name: jdbc.oracle.Driver
+        url: jdbc:://serverdb1:1521/ORAXE
+        
+    -   nombre_conexion: CONN2
+        max_active: 50
+        max_idle: 10
+        max_wait: 70000
+        username: lucas
+        password: su-password-secreta
+        driver_class_name: jdbc.oracle.Driver
+        url: jdbc:://serverdb2:1521/ORAXE
